[tool.poetry]
name = "practice"
version = "0.1.0"
description = ""
authors = ["Mason Lin <mason.lin1@hp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.4.0"
pytest-xdist = "^3.3.1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -s -v"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
